# explainerdashboard

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  LICENSE.txt  README.md  RELEASE_NOTES.md  RegressionScratchpad.ipynb  TODO.md  build-titanic-model.ipynb  custom_examples.ipynb  dashboard_examples.ipynb  explainer_examples.ipynb  pyproject.toml  pytest.ini  requirements.txt  requirements_testing.txt  setup.cfg  setup.py  test  test.csv  test_dashboard.py  titanic_data.csv  train.csv  users.json
.github/: FUNDING.yml
.github/workflows/: codecov.yml  explainerdashboard.yml  test_action.yml  upload_to_pypi.yml
.ipynb_checkpoints/: build-titanic-model-checkpoint.ipynb
assets2/: dash_bootstrap_components.min.js
docs/: requirements.txt
docs/source/: advanced.rst  buildcustom.rst  cli.rst  components.rst  composites.rst  conf.py  custom.rst  dashboard_primitives.rst  dashboards.rst  deployment.rst  explainer_methods.rst  explainer_plots.rst  explainers.rst  help.rst  hub.rst  index.rst  inline.rst  license.rst  plots.rst  tabs.rst
docs/source/_build/html/: .buildinfo  dashboards.html  explainer_methods.html  explainer_plots.html  explainers.html  genindex.html  help.html  index.html  license.html  objects.inv  plots.html  py-modindex.html  search.html  searchindex.js
docs/source/_build/html/.doctrees/: dashboards.doctree  environment.pickle  explainer_methods.doctree  explainer_plots.doctree  explainers.doctree  help.doctree  index.doctree  license.doctree  plots.doctree
docs/source/_build/html/_sources/: dashboards.rst.txt  explainer_plots.rst.txt  explainers.rst.txt  index.rst.txt  license.rst.txt  plots.rst.txt
docs/source/_build/html/_static/: bizstyle.css  bizstyle.js  documentation_options.js
explainerbunch/: TODO.md  __init__.py  explainer.py  explainer_methods.py  explainer_plots.py
explainerbunch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
explainerbunch/dashboard/: __init__.py  contributions_tab.py  dashboard.py  model_summary_tab.py  shadow_trees_tab.py  shap_dependence_tab.py  shap_interactions_tab.py
explainerdashboard/: TODO.md  __init__.py  cli.py  cli2.py  custom.py  dashboard_methods.py  dashboard_tabs.py  dashboards.py  datasets.py  explainer_methods.py  explainer_plots.py  explainers.py  make_callables.py  to_html.py
explainerdashboard/assets/: bootstrap.css  dash_bootstrap_components.min.js  main.css  stylesheet.css  util.css
explainerdashboard/dashboard_components/: __init__.py  classifier_components.py  composites.py  connectors.py  dashboard_methods.py  decisiontree_components.py  overview_components.py  regression_components.py  shap_components.py
explainerdashboard/dashboard_tabs/: contributions_tab.py  dashboard_methods.py  decision_trees_tab.py  model_summary_tab.py  shadow_trees_tab.py  shap_dependence_tab.py  shap_interactions_tab.py
explainerdashboard/datasets/: titanic_test.csv  titanic_train.csv  train.csv
explainerdashboard/static/: index.css
notebooks/: SimplifiedClassifierDashboard_examples.ipynb  custom_examples.ipynb  dashboard_examples.ipynb  simplified_classifier_dashboard_example.ipynb
tests/: conftest.py  test.csv  test_boosting_models.py  test_catboost_classifier.py  test_catboost_regression.py  test_cats_only.py  test_classifier_base.py  test_classifier_explainer.py  test_cli.py  test_cv.py  test_dashboard.py  test_dashboard_dumps.py  test_datasets.py  test_decisiontrees.py  test_externalsource.py  test_layout.py  test_linear_model.py  test_multiclass.py  test_njobs.py  test_pickle.py  test_pipelines.py  test_randomforest_explainer.py  test_regression_base.py  test_regression_explainer.py  test_rf_explainer.py  test_skorch_models.py  test_xgboost_explainer.py  test_xgboost_treeviz.py  text_xgboost_explainer.py  train.csv
tests/cli_assets/: dashboard.yaml  data.csv  explainer.joblib  explainer.yaml  explainerdashboard.yaml  model.pkl  pipeline_data.csv
tests/hub/: test_hub.py  test_hub_cli.py  test_hub_integration.py
tests/integration/: conftest.py  test_layout.py
tests/integration_tests/: conftest.py  test_customdashboards.py  test_dashboards.py
tests/test_assets/: car.csv  explainer.yaml
